project/log/20250523_010006.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

object3D.VS.hlsl:18:5: error: unknown type name 'output'
    output.texcoord = input.texcoord;
    ^
object3D.VS.hlsl:18:11: error: expected member name or ';' after declaration specifiers
    output.texcoord = input.texcoord;
    ~~~~~~^
object3D.VS.hlsl:19:2: error: expected ';' after struct
}
 ^
object3D.VS.hlsl:24:12: error: no member named 'position' in 'VertexShaderQutput'
    output.position = mul(input.position,gTransformationMatrix.WVP);
    ~~~~~~ ^

